--- a/demo/demo-shell.html
+++ b/demo/demo-shell.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../vaadin-demo-helpers/vaadin-demo-iframe-renderer-outlet.html">
 
 <link rel="import" href="element-demo.html">
+<link rel="import" href="vaadin-router-demo-shared-styles.html">
 
 <script src="../dist/vaadin-router.umd.js"></script>
 
@@ -17,3 +18,4 @@
 <link rel="import" href="demo-elements/x-profile-view.html">
 <link rel="import" href="demo-elements/x-user-numeric-view.html">
 <link rel="import" href="demo-elements/x-user-not-found-view.html">
+<link rel="import" href="demo-elements/x-login-view.html">
