Wrap imports from the test namespace.

--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -48,7 +48,13 @@
     };
 
     describe('Vaadin.Router lifecycle events', function() {
-      const {verifyActiveRoutes, onAfterEnterAction, onAfterLeaveAction, onBeforeEnterAction, onBeforeLeaveAction} = VaadinTestNamespace;
+      const {
+        verifyActiveRoutes,
+        onAfterEnterAction,
+        onAfterLeaveAction,
+        onBeforeEnterAction,
+        onBeforeLeaveAction
+      } = VaadinTestNamespace;
 
       // eslint-disable-next-line no-invalid-this
       const suite = this;
