Log difference in lifecycle callbacks. (#179)

--- a/test/router/lifecycle-events.spec.html
+++ b/test/router/lifecycle-events.spec.html
@@ -56,6 +56,24 @@
         onBeforeLeaveAction
       } = VaadinTestNamespace;
 
+      const verifyCallbacks = expectedCallbacks => {
+        expect(callbacksLog).to.be.an('array');
+        expect(expectedCallbacks).to.be.an('array');
+
+        try {
+          expect(callbacksLog).to.deep.equal(expectedCallbacks);
+        } catch (e) {
+          if (console.table) {
+            const comparisonTable = [['expected', 'actual']];
+            for (let i = 0; i < Math.max(expectedCallbacks.length, callbacksLog.length); i++) {
+              comparisonTable.push([expectedCallbacks[i], callbacksLog[i]]);
+            }
+            console.table(comparisonTable);
+          }
+          throw e;
+        }
+      };
+
       // eslint-disable-next-line no-invalid-this
       const suite = this;
       suite.title = suite.title + (window.ShadyDOM ? ' (Shady DOM)' : '');
@@ -194,7 +212,7 @@
 
           await router.render('/a');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.onBeforeEnter',
             'a.onBeforeEnter.promise',
             'a.connectedCallback',
@@ -334,7 +352,7 @@
           callbacksLog = [];
           await router.render('/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'b.action',
             'a.onBeforeLeave',
             'a.onBeforeLeave.promise',
@@ -567,7 +585,7 @@
           callbacksLog = [];
           await router.render('/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.onBeforeLeave',
             'b.onBeforeEnter',
             'a.onAfterLeave',
@@ -589,7 +607,7 @@
           callbacksLog = [];
           await router.render('/a');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.action',
             'a.onBeforeEnter',
             'a.connectedCallback',
@@ -607,7 +625,7 @@
           callbacksLog = [];
           await router.render('/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'b.action',
             'a.onBeforeLeave',
             'b.onBeforeEnter',
@@ -635,7 +653,7 @@
           callbacksLog = [];
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.action',
             'b.action',
             'b.onBeforeEnter',
@@ -662,7 +680,7 @@
           callbacksLog = [];
           await router.render('/a/c');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.action',
             'c.action',
             'b.onBeforeLeave',
@@ -693,7 +711,7 @@
           ]);
           await router.render('/a/non-existent-path');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.action',
             'asterisk.action',
             'asterisk.onBeforeEnter',
@@ -720,7 +738,7 @@
           callbacksLog = [];
           await router.render('/a/non-existent-path');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.action',
             'asterisk.action',
             'b.onBeforeLeave',
@@ -756,7 +774,7 @@
           callbacksLog = [];
           await router.render('/a/d');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'a.action',
             'ad.action',
             'ac.onBeforeLeave',
@@ -777,7 +795,7 @@
           callbacksLog = [];
           await router.render('/users/John');
 
-          expect(callbacksLog).to.deep.equal(['x-user.action']);
+          verifyCallbacks(['x-user.action']);
         });
       });
 
@@ -802,7 +820,7 @@
         it('/a/b -> /a/b', async() => {
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-a.onBeforeEnter',
@@ -817,7 +835,7 @@
           callbacksLog = [];
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
           ]);
@@ -827,7 +845,7 @@
         it('/a/b -> /c', async() => {
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-a.onBeforeEnter',
@@ -842,7 +860,7 @@
           callbacksLog = [];
           await router.render('/c');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-c.action',
             'x-b.onBeforeLeave',
             'x-a.onBeforeLeave',
@@ -860,7 +878,7 @@
         it('/a/b -> /a/d', async() => {
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-a.onBeforeEnter',
@@ -875,7 +893,7 @@
           callbacksLog = [];
           await router.render('/a/d');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-d.action',
             'x-b.onBeforeLeave',
@@ -891,7 +909,7 @@
         it('/a/b -> /a/b/e', async() => {
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-a.onBeforeEnter',
@@ -906,7 +924,7 @@
           callbacksLog = [];
           await router.render('/a/b/e');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-e.action',
@@ -932,7 +950,7 @@
           callbacksLog = [];
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-b-root.action',
@@ -951,7 +969,7 @@
           callbacksLog = [];
           await router.render('/a/b/e');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-e.action',
@@ -968,7 +986,7 @@
         it('/a/b/e -> /a/b', async() => {
           await router.render('/a/b/e');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-e.action',
@@ -987,7 +1005,7 @@
           callbacksLog = [];
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-e.onBeforeLeave',
@@ -1012,7 +1030,7 @@
           callbacksLog = [];
           await router.render('/a/b/e');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-e.action',
@@ -1031,7 +1049,7 @@
           callbacksLog = [];
           await router.render('/a/b');
 
-          expect(callbacksLog).to.deep.equal([
+          verifyCallbacks([
             'x-a.action',
             'x-b.action',
             'x-b-root.action',
