--- a/demo/demo-elements/x-login-view.html
+++ b/demo/demo-elements/x-login-view.html
@@ -21,7 +21,7 @@
         login() {
           window.authorized = true;
           window.dispatchEvent(
-            new CustomEvent('vaadin-router:navigate',
+            new CustomEvent('vaadin-router:go',
               {detail: {pathname: this.route.params.to || '/'}}));
         }
       }
