--- a/demo/vaadin-router-lifecycle-callbacks-demos.html
+++ b/demo/vaadin-router-lifecycle-callbacks-demos.html
@@ -15,6 +15,8 @@
         <li><b><code>onAfterEnter(context): Promise | void</code></b></li>
         <li><b><code>onBeforeLeave(context): Promise | Cancel | void</code></b></li>
         <li><b><code>onAfterLeave(context): Promise | void</code></b></li>
+        <hr/>
+        <li>the <code>'vaadin-router:route-changed'</code> event on the <code>window</code></li>
       </ul>
       Vaadin.Router lifecycle callbacks can be defined as methods on the Web Component
       <a href="https://html.spec.whatwg.org/multipage/custom-elements.html#custom-element-definition"
@@ -316,6 +318,41 @@
       </template>
     </vaadin-demo-snippet>
 
+    <h3>Listen to Global Navigation Events</h3>
+    <p>
+      In order to react to route changes in other parts of the app (outside of
+      route components), you can add an event listener for the <code>
+      vaadin-router:route-changed</code> events on the <code>window</code>.
+      Vaadin.Router dispatches such events every time after navigating to a
+      new path.
+    </p>
+    <vaadin-demo-snippet id="vaadin-router-lifecycle-events-demos-6" iframe-src="iframe.html">
+      <template preserve-content>
+        <a href="/">Home</a>
+        <a href="/users">All Users</a>
+        <a href="/users/kim">Kim</a>
+        <a href="/about">About</a>
+        <p id="breadcrumbs"></p>
+        <div id="outlet"></div>
+
+        <script>
+          window.addEventListener('vaadin-router:route-changed', (event) => {
+            const breadcrumbs = document.querySelector('#breadcrumbs');
+            breadcrumbs.innerHTML = `You are at '${event.detail.pathname}'`;
+          });
+
+          const {Router} = window.Vaadin;
+
+          const router = new Router(document.getElementById('outlet'));
+          router.setRoutes([
+            {path: '/', component: 'x-home-view'},
+            {path: '/users', component: 'x-user-list'},
+            {path: '/users/:user', component: 'x-user-profile'},
+            {path: '(.*)', component: 'x-not-found-view'},
+          ]);
+        </script>
+      </template>
+    </vaadin-demo-snippet>
   </template>
   <script>
     class VaadinRouterLifecycleCallbacksDemos extends DemoReadyEventEmitter(ElementDemo(Polymer.Element)) {
